# screenshot-editor

./: .gitignore  AUTHORS  NEWS  configure.ac
src/: Makefile.am  screenshot-editor.c
