AC_INIT([screenshot-editor], [0.1], [bug-report@address])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

GLIB_REQUIRED=2.20.0
GTK_REQUIRED=2.18.0
GOOCANVAS_REQUIRED=0.15


PKG_CHECK_MODULES(LIBGDICT1, glib-2.0 >= $GLIB_REQUIRED)
AC_SUBST(LIBGDICT1_CFLAGS)
AC_SUBST(LIBGDICT1_LIBS)
PKG_CHECK_MODULES(LIBGDICT2, gtk+-2.0 >= $GTK_REQUIRED)
AC_SUBST(LIBGDICT2_CFLAGS)
AC_SUBST(LIBGDICT2_LIBS)
PKG_CHECK_MODULES(LIBGDICT3, goocanvas >= $GOOCANVAS_REQUIRED)
AC_SUBST(LIBGDICT3_CFLAGS)
AC_SUBST(LIBGDICT3_LIBS)

